--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,11 +1,11 @@
 <h1>Create a Song</h1>
 
-<%= form_for @song  do |f| %>
+<%= form_for @song do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
   <br />
+  <%= f.label :artist_id %>
+  <%= f.collection_select :artist_id, Artist.all, :id, :name %>
 
   <%= f.submit %>
 <% end %>
-
-
